# test

./: .env.test  LICENSE  README.md  app.py  cli.py  config.json  demo.py  pyproject.toml  requirements.txt  setup.sh
.streamlit/: config.toml
data/: ai_overview.txt  langchain_examples.py  langchain_guide.txt
src/: agents.py  code_generator.py  document_processor.py  mock.md  openrouter_utils.py  qa_system.py  utils.py
src/code_generator/: __init__.py  api_client.py  core.py  database.py  documentation.py  output_parser.py  parser.py  refactoring.py  templates.py  testing.py  utils.py
src/code_generator/models/: __init__.py  generation.py
src/code_generator/templates/: __init__.py  base.py  registry.py
src/config/: __init__.py  settings.py
src/ui/: __init__.py  app.py  base_component.py
src/ui/components/: __init__.py  code_generation.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_actual_exceptions.py  test_basic.py  test_code_generator.py  test_document_processor.py  test_exception_contract.py  test_exceptions.py  test_exceptions_simple.py  test_logger.py  test_settings.py
